--- a/src/home/home.html
+++ b/src/home/home.html
@@ -5,10 +5,17 @@
     <script src="main.js"> </script>
     <link rel="stylesheet" href="../../resources/styles/sitewide.css">
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="../../resources/images/logos/Isotipo---PNG%20modificado.png">
     <title>Buffer Project</title>
 </head>
     <body>
         <main>
+            <div id="header" class="banner">
+                <span>
+                    Proyecto Buffer
+                </span>
+            </div>
+
             <div class="homeMainInfoSegment" id="1">
                 <h1> Quiénes Somos </h1>
                 <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat mi purus, et fringilla nulla finibus non. In eleifend scelerisque luctus. Sed erat turpis, auctor quis eros tristique, dapibus luctus arcu. Integer ultrices vestibulum ante, in semper felis consectetur nec. Cras vel dui nulla. Mauris egestas, ex quis pellentesque vestibulum, lorem risus eleifend magna, sed mattis massa nunc vel ante. Phasellus varius, dui sed sodales pulvinar, elit elit sodales dolor, non cursus risus lorem at dui. Sed gravida ex quis velit posuere lacinia. Fusce id ante ut libero sodales porttitor. Nulla facilisi. Maecenas laoreet luctus nibh, pretium molestie sapien pretium quis. </p>
