--- a/src/home/home.html
+++ b/src/home/home.html
@@ -2,34 +2,70 @@
 <html lang="en">
 
 <head>
-    <script src="main.js"> </script>
-    <link rel="stylesheet" href="../../resources/styles/sitewide.css">
+    <link rel="stylesheet" type="text/css" href="testeanding.css">
     <meta charset="UTF-8">
     <link rel="icon" type="image/png" href="../../resources/images/logos/Isotipo---PNG%20modificado.png">
     <title>Buffer Project</title>
 </head>
-    <body>
-        <main>
-            <div id="header" class="banner">
-                <span>
-                    Proyecto Buffer
-                </span>
-            </div>
 
-            <div class="homeMainInfoSegment" id="1">
-                <h1> Quiénes Somos </h1>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat mi purus, et fringilla nulla finibus non. In eleifend scelerisque luctus. Sed erat turpis, auctor quis eros tristique, dapibus luctus arcu. Integer ultrices vestibulum ante, in semper felis consectetur nec. Cras vel dui nulla. Mauris egestas, ex quis pellentesque vestibulum, lorem risus eleifend magna, sed mattis massa nunc vel ante. Phasellus varius, dui sed sodales pulvinar, elit elit sodales dolor, non cursus risus lorem at dui. Sed gravida ex quis velit posuere lacinia. Fusce id ante ut libero sodales porttitor. Nulla facilisi. Maecenas laoreet luctus nibh, pretium molestie sapien pretium quis. </p>
-            </div>
+<body>
+    <nav id=menu>
+        <ul>
+            <li class="dropdown">
+                <a href="javascript:void(0)" class="dropbtn">Escuela</a>
+                <a href="javascript:void(0)" class="dropbtn">Comercial</a>
+                <a href="javascript:void(0)" class="dropbtn">Institucional</a>
+                <a href="javascript:void(0)" class="dropbtn">Contacto</a>
+                <div class="dropdown-content">
+                    <a href="#">Quiénes Somos</a>
+                    <a href="#">Qué ofrecemos</a>
+                    <a href="#">Contacto</a>
+                </div>
+            </li>
+        </ul>
 
-            <div class="homeMainInfoSegment" id="2">
-                <h1> Qué ofrecemos</h1>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat mi purus, et fringilla nulla finibus non. In eleifend scelerisque luctus. Sed erat turpis, auctor quis eros tristique, dapibus luctus arcu. Integer ultrices vestibulum ante, in semper felis consectetur nec. Cras vel dui nulla. Mauris egestas, ex quis pellentesque vestibulum, lorem risus eleifend magna, sed mattis massa nunc vel ante. Phasellus varius, dui sed sodales pulvinar, elit elit sodales dolor, non cursus risus lorem at dui. Sed gravida ex quis velit posuere lacinia. Fusce id ante ut libero sodales porttitor. Nulla facilisi. Maecenas laoreet luctus nibh, pretium molestie sapien pretium quis. </p>
-            </div>
+    </nav>
+    
+    <main>
+        <div id="header" class="banner">
+            <span>
+                Proyecto Buffer
+            </span>
+        </div>
 
-            <div class="homeMainInfoSegment" id="3">
-                <h1> Contacto </h1>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat mi purus, et fringilla nulla finibus non. In eleifend scelerisque luctus. Sed erat turpis, auctor quis eros tristique, dapibus luctus arcu. Integer ultrices vestibulum ante, in semper felis consectetur nec. Cras vel dui nulla. Mauris egestas, ex quis pellentesque vestibulum, lorem risus eleifend magna, sed mattis massa nunc vel ante. Phasellus varius, dui sed sodales pulvinar, elit elit sodales dolor, non cursus risus lorem at dui. Sed gravida ex quis velit posuere lacinia. Fusce id ante ut libero sodales porttitor. Nulla facilisi. Maecenas laoreet luctus nibh, pretium molestie sapien pretium quis. </p>
-            </div>
-        </main>
-    </body>
+        <div class="homeMainInfoSegment" id="1">
+            <h1> Quiénes Somos </h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat mi purus, et fringilla nulla
+                finibus non. In eleifend scelerisque luctus. Sed erat turpis, auctor quis eros tristique, dapibus luctus
+                arcu. Integer ultrices vestibulum ante, in semper felis consectetur nec. Cras vel dui nulla. Mauris
+                egestas, ex quis pellentesque vestibulum, lorem risus eleifend magna, sed mattis massa nunc vel ante.
+                Phasellus varius, dui sed sodales pulvinar, elit elit sodales dolor, non cursus risus lorem at dui. Sed
+                gravida ex quis velit posuere lacinia. Fusce id ante ut libero sodales porttitor. Nulla facilisi.
+                Maecenas laoreet luctus nibh, pretium molestie sapien pretium quis. </p>
+        </div>
+
+        <div class="homeMainInfoSegment" id="2">
+            <h1> Qué ofrecemos</h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat mi purus, et fringilla nulla
+                finibus non. In eleifend scelerisque luctus. Sed erat turpis, auctor quis eros tristique, dapibus luctus
+                arcu. Integer ultrices vestibulum ante, in semper felis consectetur nec. Cras vel dui nulla. Mauris
+                egestas, ex quis pellentesque vestibulum, lorem risus eleifend magna, sed mattis massa nunc vel ante.
+                Phasellus varius, dui sed sodales pulvinar, elit elit sodales dolor, non cursus risus lorem at dui. Sed
+                gravida ex quis velit posuere lacinia. Fusce id ante ut libero sodales porttitor. Nulla facilisi.
+                Maecenas laoreet luctus nibh, pretium molestie sapien pretium quis. </p>
+        </div>
+
+        <div class="homeMainInfoSegment" id="3">
+            <h1> Contacto </h1>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed volutpat mi purus, et fringilla nulla
+                finibus non. In eleifend scelerisque luctus. Sed erat turpis, auctor quis eros tristique, dapibus luctus
+                arcu. Integer ultrices vestibulum ante, in semper felis consectetur nec. Cras vel dui nulla. Mauris
+                egestas, ex quis pellentesque vestibulum, lorem risus eleifend magna, sed mattis massa nunc vel ante.
+                Phasellus varius, dui sed sodales pulvinar, elit elit sodales dolor, non cursus risus lorem at dui. Sed
+                gravida ex quis velit posuere lacinia. Fusce id ante ut libero sodales porttitor. Nulla facilisi.
+                Maecenas laoreet luctus nibh, pretium molestie sapien pretium quis. </p>
+        </div>
+    </main>
+</body>
+
 </html>
